--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About</a></li>
 				<li><a href="/blog">Blog</a></li>
+				<li><a href="/blog/2017/06/15/timeline-js-example">Timeline</a>
 	    		</ul>
 			</nav>
 			<div class="container">
