--- a/xml-style.css
+++ b/xml-style.css
@@ -1,16 +1,16 @@
-#center.* {text-align: center;}
+[rendition="center"] {text-align: center;}
 
-#x-large.*  {font-size: 200%;}
+[rendition="x-large"]  {font-size: 200%;}
 
-#uppercase.* {text-transform: uppercase;}
+[rendition="uppercase"] {text-transform: uppercase;}
 
-#small.* {font-size: 100%;}
+[rendition="small"] {font-size: 100%;}
 
-#red.* {color: red;}
+[rendition="red"] {color: red;}
 
-#xx-large.* {font-size: 250%;}
+[rendition="xx-large"] {font-size: 250%;}
 
-#expanded.* {letter-spacing: 3px;}
+[rendition="expanded"] {letter-spacing: 3px;}
 
 
 
