--- a/xml-style.css
+++ b/xml-style.css
@@ -2,6 +2,8 @@
 
 docImprint {background: yellow;}
 
+lb {line-height: 20px;}
+
 *[rendition="center"] {text-align: center;}
 
 *[rendition="x-large"]  {font-size: 200%;}
