--- a/xml-style.css
+++ b/xml-style.css
@@ -6,17 +6,17 @@ lb {line-height: 20px;}
 
 docTitle[rendition="center"] {text-align: center;}
 
-[rendition="x-large"]  {font-size: 200%;}
+hi[rendition="x-large"]  {font-size: 200%;}
 
-[rendition="uppercase"] {text-transform: uppercase;}
+hi[rendition="uppercase"] {text-transform: uppercase;}
 
-[rendition="small"] {font-size: 100%;}
+hi[rendition="small"] {font-size: 100%;}
 
-[rendition="red"] {color: red;}
+hi[rendition="red"] {color: red;}
 
-[rendition="xx-large"] {font-size: 250%;}
+hi[rendition="xx-large"] {font-size: 250%;}
 
-[rendition="expanded"] {letter-spacing: 3px;}
+publisher[rendition="expanded"] {letter-spacing: 3px;}
 
 
 
