--- a/xml-style.css
+++ b/xml-style.css
@@ -4,7 +4,10 @@ docImprint {background: yellow;}
 
 lb {line-height: 20px;}
 
-docTitle[rendition="center"] {text-align: center;}
+docTitle[rendition="center"] {
+  text-align: center;
+  background: red;
+}
 
 hi[rendition="x-large"]  {font-size: 200%;}
 
