--- a/xml-style.css
+++ b/xml-style.css
@@ -1,12 +1,12 @@
 * {display:block;}
 
-docImprint {background: yellow;}
+docImprint {background-color: yellow;}
 
 lb {line-height: 20px;}
 
 docTitle[rendition="center"] {
   text-align: center;
-  background: red;
+  background-color: red;
 }
 
 hi[rendition="x-large"]  {font-size: 200%;}
