--- a/xml-style.css
+++ b/xml-style.css
@@ -9,6 +9,8 @@ docTitle[rendition="center"] {
   background-color: red;
 }
 
+hi {font-size: 200%};
+
 hi[rendition="x-large"]  {font-size: 200%;}
 
 hi[rendition="uppercase"] {text-transform: uppercase;}
