--- a/xml-style.css
+++ b/xml-style.css
@@ -4,24 +4,19 @@ docImprint {background-color: yellow;}
 
 lb {line-height: 20px;}
 
-docTitle[rendition="center"] {
-  text-align: center;
-  background-color: red;
-}
+[rendition="#center"] {text-align: center;}
 
-hi {font-size: 200%};
+hi[rendition="#x-large"]  {font-size: 200%;}
 
-hi[rendition="x-large"]  {font-size: 200%;}
+hi[rendition="#uppercase"] {text-transform: uppercase;}
 
-hi[rendition="uppercase"] {text-transform: uppercase;}
+hi[rendition="#small"] {font-size: 100%;}
 
-hi[rendition="small"] {font-size: 100%;}
+hi[rendition="#red"] {color: red;}
 
-hi[rendition="red"] {color: red;}
+hi[rendition="#xx-large"] {font-size: 250%;}
 
-hi[rendition="xx-large"] {font-size: 250%;}
-
-publisher[rendition="expanded"] {letter-spacing: 3px;}
+publisher[rendition="#expanded"] {letter-spacing: 3px;}
 
 
 
