--- a/xml-style.css
+++ b/xml-style.css
@@ -4,7 +4,7 @@ lb {line-height: 20px;}
 
 [rendition*="#center"] {text-align: center;}
 
-[rendition*="#x-large ] {font-size: 200%;}
+[rendition*="#x-large"] {font-size: 200%;}
 
 [rendition*="#uppercase"] {text-transform: uppercase;}
 
