--- a/xml-style.css
+++ b/xml-style.css
@@ -16,7 +16,10 @@ lb {line-height: 20px;}
 
 [rendition~="#expanded"] {letter-spacing: 3px;}
 
-space[quantity=1] {padding:10px;}
+space[quantity=1] {
+  padding:10px;
+  line-height:50px;
+}
 space[quantity=3] {padding:30px;}
 space[quantity=4] {padding:40px;}
 space[quantity=5] {padding:50px;}
