--- a/xml-style.css
+++ b/xml-style.css
@@ -16,13 +16,13 @@ lb {line-height: 20px;}
 
 [rendition~="#expanded"] {letter-spacing: 3px;}
 
-space[quantity=1] {
+space[quantity="1"] {
   padding:10px;
-  line-height:50px;
+
 }
-space[quantity=3] {padding:30px;}
-space[quantity=4] {padding:40px;}
-space[quantity=5] {padding:50px;}
+space[quantity="3"] {padding:30px;}
+space[quantity="4"] {padding:40px;}
+space[quantity="5"] {padding:50px;}
 
 
 
