--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About</a></li>
 				<li><a href="/blog">Blog</a></li>
-				<li><a href="/teaching">Teaching</a>
+				<li><a href="/teaching/">Teaching</a>
 	    		</ul>
 			</nav>
 			<div class="container">
