--- a/css/main.css
+++ b/css/main.css
@@ -41,3 +41,12 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
+
+ul.assignments { 
+    margin: 20px auto 40px; 
+    font-size: 1.5em;
+}
+
+ul.assignments li {
+    list-style: none;
+}
