--- a/css/main.css
+++ b/css/main.css
@@ -33,12 +33,12 @@ footer {
     font-size: .8em;
 }
 
-ul.posts { 
+ul.post { 
     margin: 20px auto 40px; 
     font-size: 1.5em;
 }
 
-ul.posts li {
+ul.post li {
     list-style: none;
 }
 
