--- a/css/main.css
+++ b/css/main.css
@@ -42,11 +42,11 @@ ul.posts li {
     list-style: none;
 }
 
-ul.assignments { 
+ul { 
     margin: 20px auto 40px; 
     font-size: 1.5em;
 }
 
-ul.assignments li {
+ul li {
     list-style: none;
 }
