--- a/css/main.css
+++ b/css/main.css
@@ -99,3 +99,16 @@ pre code {
   max-height: 340px;
   overflow-y: scroll;
 }
+
+code,
+kbd,
+pre,
+samp {
+  font-family: monospace, serif;
+  font-size: 1em;
+}
+
+pre {
+  white-space: pre-wrap;
+}
+
