--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,8 @@
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About</a></li>
 				<li><a href="/blog">Blog</a></li>
-				<li><a href="/Z656/">Z656</a>
+				<li><a href="/Z656/">Z656</a></li>
+				<li><a href="/Z656/">Z603</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
