--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ nav ul, footer ul {
     padding: 0px;
     list-style: none;
     font-weight: bold;
+    font-size: 2em;
 }
 nav ul li, footer ul li {
     display: inline;
@@ -25,8 +26,9 @@ h1 {
 }
 p {
     font-size: 1.5em;
-    line-height: 1.4em;
+    line-height: 1.3em;
     color: #333;
+    letter-spacing: 0.1em;
 }
 footer {
     border-top: 1px solid #d5d5d5;
