--- a/css/main.css
+++ b/css/main.css
@@ -123,4 +123,7 @@ samp {
 pre {
   white-space: pre-wrap;
 }
-
+.fira {
+    font-family: FiraSans;
+    src: url("/css/FiraSans-Regular.otf") format("opentype");   
+}
