--- a/css/main.css
+++ b/css/main.css
@@ -128,5 +128,6 @@ pre {
     src: url("/css/FiraSans-Regular.otf") format("opentype");   
 }
 p.fira {
-    font-family:'FiraSans';   
+    font-family:'FiraSans';  
+    color: green;
 }
