--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About</a></li>
 				<li><a href="/blog">Blog</a></li>
+				<li><a href="/projects">Projects</a></li>
 				<li><a href="/Z656/">Z656</a></li>
 				<li><a href="/Z603/">Z603</a></li>
 	    		</ul>
