--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,10 +13,8 @@
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About</a></li>
-				<li><a href="/blog">Blog</a></li>
 				<li><a href="/projects">Projects</a></li>
-				<li><a href="/Z656/">Z656</a></li>
-				<li><a href="/Z603/">Z603</a></li>
+				<li><a href="/teaching">Teaching</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
